--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,4 @@ GOOGLE_APPLICATION_CREDENTIALS=service-account.json
 GOOGLE_CALENDAR_ID=primary
 PORT=8080
 NODE_ENV=development
+SERVICE_URL=https://focustimer-bot-xxxxx.a.run.app
