refactor: replace googleapis with GAS bridge - no service account needed

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-TELEGRAM_BOT_TOKEN=your_telegram_bot_token
-GOOGLE_APPLICATION_CREDENTIALS=service-account.json
-GOOGLE_CALENDAR_ID=primary
+TELEGRAM_BOT_TOKEN=your-bot-token-here
+GAS_WEBAPP_URL=https://script.google.com/macros/s/YOUR_DEPLOYMENT_ID/exec
+GAS_API_KEY=
 PORT=8080
 NODE_ENV=development
 SERVICE_URL=https://focustimer-bot-xxxxx.a.run.app
