--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -22,7 +22,12 @@ steps:
       - 'managed'
       - '--allow-unauthenticated'
       - '--update-env-vars'
-      - 'NODE_ENV=production,TELEGRAM_BOT_TOKEN=8062500665:AAGNnpnBMHhwZnrPIM6xz53ayrAnsMNJ40w,SERVICE_URL=https://focustimer-bot-120951296419.asia-east1.run.app,GAS_WEBAPP_URL=https://script.google.com/macros/s/AKfycbxhvm4GT6tQLd0FapET5Z7HriYCQAvSopVFmo5S_yH6Hz9jtHmUqh8D5qgS0IlosV0y/exec'
+      - 'NODE_ENV=production,TELEGRAM_BOT_TOKEN=$_TELEGRAM_BOT_TOKEN,SERVICE_URL=$_SERVICE_URL,GAS_WEBAPP_URL=$_GAS_WEBAPP_URL'
 
 images:
   - 'gcr.io/$PROJECT_ID/focustimer-bot'
+
+substitutions:
+  _TELEGRAM_BOT_TOKEN: ''
+  _SERVICE_URL: 'https://focustimer-bot-120951296419.asia-east1.run.app'
+  _GAS_WEBAPP_URL: ''
